# BuildExamples-TP

./: README.md  convert_to_tabs.sh  group_management.sls
AutoConfExamples/01_hello_world/: Makefile  Makefile.in  config.h  config.status  configure  configure.ac  main.cpp
AutoConfExamples/01_hello_world/autom4te.cache/: output.1  requests  traces.0  traces.1
AutoConfExamples/01_hello_world/src/: Makefile  Makefile.am  Makefile.in  hello
AutoConfExamples/01_hello_world/src/.deps/: main.Po
AutoConfExamples/02_opencv_included/src/: .gitignore  Makefile.am  Makefile.in  configure  configure.ac
AutoConfExamples/02_opencv_included/src/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
AutoConfExamples/02_opencv_included/src/main/: Makefile.am  Makefile.in  Makefile2  main.cpp
BashExamples/00_hello_world/: HelloWorldProject  build.sh  main.cpp
BashExamples/01_headers_added/: build.sh  clean.sh
BashExamples/01_headers_added/src/: FirstClass.h
BazelExamples/: .gitignore
BazelExamples/00-hello-world/main/: BUILD
BazelExamples/01-library/: BUILD  src
BazelExamples/02-tests/: MODULE.bazel  WORKSPACE
BazelExamples/02-tests/main/: BUILD  main.cpp
BazelExamples/02-tests/sqrt/: BUILD  sqrt.cpp  sqrt.h
BazelExamples/02-tests/test/: BUILD  sqrt_tests.cpp
BazelExamples/03-cmake/: MODULE.bazel  WORKSPACE
BazelExamples/03-cmake/examples/: BUILD  config.ini
BazelExamples/03-cmake/main/: BUILD  main.cpp
CMake2018/04-cmake/01-versioning/: Config.h.in
CMake2018/04-cmake/02-library/MathFunctions/: MathFunctions.cpp  MathFunctions.h
CMakeExamples/: Readme.MD
CMakeExamples/00_hello_world/: CMakeLists.txt  README.md  main.cpp
CMakeExamples/01_headers_added/: CMakeLists.txt  README.md
CMakeExamples/02_multiple_projects/: CMakeLists.txt  README.md  main.cpp
CMakeExamples/02_multiple_projects/build-cmake/: CMakeCache.txt  FirstClassAsLibrary  Makefile  cmake_install.cmake  install_manifest.txt
CMakeExamples/02_multiple_projects/build-cmake/src/: Makefile  cmake_install.cmake
CMakeExamples/02_multiple_projects/include/: FirstClass.h
CMakeExamples/02_multiple_projects/src/: CMakeLists.txt  FirstClass.cpp
CMakeExamples/03_include_other_libraries/: CMakeLists.txt  README.md  main.cpp
CMakeExamples/03_include_other_libraries/include/: ListDir.h
CMakeExamples/03_include_other_libraries/src/: CMakeLists.txt  ListDir.cpp
CMakeExamples/04_generate_code_from_python/: CMakeLists.txt  README.md  data.json  generate_array.py  main.cpp
CMakeExamples/05_supplementary/: .gitignore  README.md
CMakeExamples/05_supplementary/00-hello-world/: CMakeLists.txt
CMakeExamples/05_supplementary/01-versioning/: CMakeLists.txt  Config.cpp  Config.h
CMakeExamples/05_supplementary/02-library/: CMakeLists.txt  main.cpp
CMakeExamples/05_supplementary/02-library/MathFunctions/: CMakeLists.txt  MathFunctions.cpp
CMakeExamples/06-cmake-python/: CMakeLists.txt
CMakeExamples/06-cmake-python/00-hello-world/: CMakeLists.txt  example.cpp  greet.h
CMakeExamples/06-cmake-python/01-classes/: World.cpp  World.h  library.cpp
CMakeExamples/06-cmake-python/02-get-set/: CMakeLists.txt  Var.h  config.h.in
CMakeExamples/06-cmake-python/03-inheritance/: Base.h  library.cpp
CMakeExamples/06-cmake-python/04-fast-calculation/: sum.h
CMakeExamples/06-cmake-python/boost-python/: CMakeLists.txt
CMakeExamples/06-cmake-python/boost-python/00-hello-world/: CMakeLists.txt  wrapper.cpp
CMakeExamples/06-cmake-python/boost-python/01-classes/: CMakeLists.txt  World.h  library.cpp
CMakeExamples/06-cmake-python/boost-python/02-get-set/: Var.cpp  config.h  library.cpp
CMakeExamples/06-cmake-python/boost-python/03-inheritance/: Base.cpp  BaseWrap.cpp  BaseWrap.h  CMakeLists.txt
CMakeExamples/06-cmake-python/boost-python/04-fast-calculation/: CMakeLists.txt  sum.cpp  wrapper.cpp
CMakeExamples/06-cmake-python/boost-python/lib/: example.py
CMakeExamples/06-cmake-python/pybind11/: .gitignore
CMakeExamples/06-cmake-python/pybind11/00-simple-example/: README.md
CMakeExamples/06-cmake-python/pybind11/01-cmake/: CMakeLists.txt
CMakeExamples/06-cmake-python/pybind11/02-python-packages/: pet.cpp  setup.py
CMakeExamples/07-find-module/: CMakeLists.txt  README.md  main.cpp
CMakeExamples/07-find-module/cmake/: FindFC.cmake
CargoExamples/O1-simple-example/: Cargo.toml
CargoExamples/O2-code-generation/: Cargo.toml
CargoExamples/O2-code-generation/src/: main.rs
CargoExamples/O3-native/: Cargo.toml  build.rs
CargoExamples/O3-native/src/: main.rs
GradleExamples/01-simple-project/: build.gradle  settings.gradle
GradleExamples/01-simple-project/src/main/java/org/example/: HelloWorld.java
GradleExamples/02-including-other-packages/: .gitignore  settings.gradle
GradleExamples/02-including-other-packages/app/: build.gradle
GradleExamples/02-including-other-packages/first_class/: build.gradle
GradleExamples/03-download-libraries/: build.gradle  settings.gradle
GradleExamples/03-download-libraries/src/main/java/org/example/: Main.java
MakeExamples/00_hello_world/: .gitignore  HelloWorldProject  Makefile  main.cpp
MakeExamples/01_headers_added/: HelloWorldProject  Makefile  src
MavenExamples/00-exec-main-classes/: README.md  pom.xml
MavenExamples/00-exec-main-classes/src/main/java/: MainClassA.java
MavenExamples/01-add-tests/: .gitignore  pom.xml
MavenExamples/01-add-tests/.github/workflows/: maven.yml
MavenExamples/01-add-tests/src/main/java/org/example/: MyClass.java  MyClassSetUp.java
MavenExamples/01-add-tests/src/test/java/org/example/: TestMock.java  TestMyClass.java  TestMyClassSetUp.java  TestWebBrowser.java
MavenExamples/03-packaging/: .gitignore  README.md  pom.xml
MavenExamples/03-packaging/core/: pom.xml
MavenExamples/03-packaging/service/: pom.xml
MavenExamples/04-gen-sources/: .gitignore  README.md  pom.xml
MavenExamples/src/main/java/: MainClassA.java  MainClassB.java
SaltStack/: clone_repo.sls  conf_management.sls  nginx.sls  top.sls  user_management.sls
(+8 files in other folders)
