# ============================================================================
# Пример 01: Проект с заголовочными файлами
# ============================================================================
# Демонстрирует организацию кода с разделением на заголовки и реализацию

cmake_minimum_required(VERSION 3.10)

project(FirstClassProject)

# Создаем переменную со списком исходных файлов
# Переменные в CMake задаются через set() и используются через ${...}
set(SOURCES src/FirstClass.cpp src/main.cpp)

# Создаем исполняемый файл, используя переменную SOURCES
# CMake автоматически найдет заголовочные файлы в той же директории
add_executable(FirstClassProject ${SOURCES})
